force-app/main/default/objects/candidate__c/candidate__c.object-meta.xml
<CustomObject>
    <customHelpPage>Job_candidate_Help</customHelpPage>
    <description>the person who have applied for a particular position</description>
    <label>candidate</label>
    <nameField>
        <label>candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>