force-app/main/default/objects/candidate__c/fields/Prospect_rating__c.field-meta.xml
<CustomField>
    <fullName>Prospect_rating__c</fullName>
    <label>Prospect rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hot</fullName>
            </value>
            <value>
                <fullName>warm</fullName>
            </value>
            <value>
                <fullName>cool</fullName>
            </value>
            <value>
                <fullName>Manager Favorite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>